--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <title>Valorant Stat Tracker</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <style>
+    /* Extra small devices (phones, 600px and down) */
+    @media only screen and (max-width: 600px) {
+      table {
+        font-size: 11px;
+      }
+
+      .player-search-bar {
+        width: 80%;
+      }
+    }
+
+    /* Small devices (portrait tablets and large phones, 600px and up) */
+    @media only screen and (min-width: 600px) {
+      table {
+        font-size: 12px;
+      }
+
+      .player-search-bar {
+        width: 70%;
+      }
+    }
+
+    /* Medium devices (landscape tablets, 768px and up) */
+    @media only screen and (min-width: 768px) {
+      table {
+        font-size: 13px;
+      }
+
+      .player-search-bar {
+        width: 60%;
+      }
+    }
+
+    /* Large devices (laptops/desktops, 992px and up) */
+    @media only screen and (min-width: 992px) {
+      table {
+        font-size: 14px;
+      }
+
+      .player-search-bar {
+        width: 50%;
+      }
+    }
+
+    /* Extra large devices (large laptops and desktops, 1200px and up) */
+    @media only screen and (min-width: 1200px) {
+      table {
+        font-size: 15px;
+      }
+
+      .player-search-bar {
+        width: 40%;
+      }
+    }
+
+    td {
+      max-width: 120px;
+      overflow: hidden;
+    }
+
+    a {
+      color: #fff !important;
+      text-decoration: none !important;
+    }
+
+    a:hover {
+      text-decoration: underline !important;
+    }
+  </style>
+  <title>Valorant Stat Tracker</title>
+</head>
+
+<body style="background-color: #191d2c;">
+  <div id="root"></div>
+</body>
+
 </html>
